// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`game queries game query with AUDIO and ENGLISH 1`] = `
[
  {
    "additionalInfo": {
      "audioUrl": null,
      "examples": [
        {
          "text": "She found the perfect book by sheer serendipity.",
          "translation": null,
        },
      ],
      "imgUrl": "https://example.com/images/serendipity.jpg",
      "shortDef": "<b>serendipity means</b> Unexpected good fortune.",
    },
    "answer": [
      "serendipity",
    ],
    "options": null,
    "question": [
      "https://example.com/audio/serendipity.mp3",
    ],
    "wordId": Any<String>,
  },
  {
    "additionalInfo": {
      "audioUrl": null,
      "examples": [
        {
          "text": "The beauty of the cherry blossoms is ephemeral.",
          "translation": null,
        },
      ],
      "imgUrl": "https://example.com/images/ephemeral.jpg",
      "shortDef": "<b>ephemeral means</b> Short-lived.",
    },
    "answer": [
      "ephemeral",
    ],
    "options": null,
    "question": [
      "https://example.com/audio/ephemeral.mp3",
    ],
    "wordId": Any<String>,
  },
  {
    "additionalInfo": {
      "audioUrl": null,
      "examples": [
        {
          "text": "Smartphones have become ubiquitous in modern life.",
          "translation": null,
        },
      ],
      "imgUrl": "https://example.com/images/ubiquitous.jpg",
      "shortDef": "<b>ubiquitous means</b> Found everywhere.",
    },
    "answer": [
      "ubiquitous",
    ],
    "options": null,
    "question": [
      "https://example.com/audio/ubiquitous.mp3",
    ],
    "wordId": Any<String>,
  },
  {
    "additionalInfo": {
      "audioUrl": null,
      "examples": [
        {
          "text": "His quixotic quest for world peace amused his friends.",
          "translation": null,
        },
      ],
      "imgUrl": "https://example.com/images/quixotic.jpg",
      "shortDef": "<b>quixotic means</b> Idealistic but impractical.",
    },
    "answer": [
      "quixotic",
    ],
    "options": null,
    "question": [
      "https://example.com/audio/quixotic.mp3",
    ],
    "wordId": Any<String>,
  },
  {
    "additionalInfo": {
      "audioUrl": null,
      "examples": [
        {
          "text": "She enjoyed the peace and quiet of her mountain solitude.",
          "translation": null,
        },
      ],
      "imgUrl": "https://example.com/images/solitude.jpg",
      "shortDef": "<b>solitude means</b> State of being alone.",
    },
    "answer": [
      "solitude",
    ],
    "options": null,
    "question": [
      "https://example.com/audio/solitude.mp3",
    ],
    "wordId": Any<String>,
  },
  {
    "additionalInfo": {
      "audioUrl": null,
      "examples": [
        {
          "text": "The luminous moon lit up the night sky.",
          "translation": null,
        },
      ],
      "imgUrl": "https://example.com/images/luminous.jpg",
      "shortDef": "<b>luminous means</b> Glowing or bright.",
    },
    "answer": [
      "luminous",
    ],
    "options": null,
    "question": [
      "https://example.com/audio/luminous.mp3",
    ],
    "wordId": Any<String>,
  },
]
`;

exports[`game queries game query with AUDIO and SPANISH 1`] = `
[
  {
    "additionalInfo": {
      "audioUrl": null,
      "examples": [
        {
          "text": "Él puede correr muy rápido.",
          "translation": "He can run very fast.",
        },
      ],
      "imgUrl": "https://example.com/images/correr.jpg",
      "shortDef": "<b>correr means</b> To run.",
    },
    "answer": [
      "correr",
      "korrer",
    ],
    "options": null,
    "question": [
      "https://example.com/audio/correr.mp3",
    ],
    "wordId": Any<String>,
  },
  {
    "additionalInfo": {
      "audioUrl": null,
      "examples": [
        {
          "text": "Su felicidad es contagiosa.",
          "translation": "Her happiness is contagious.",
        },
      ],
      "imgUrl": "https://example.com/images/felicidad.jpg",
      "shortDef": "<b>felicidad means</b> Happiness.",
    },
    "answer": [
      "felicidad",
      "felisidad",
    ],
    "options": null,
    "question": [
      "https://example.com/audio/felicidad.mp3",
    ],
    "wordId": Any<String>,
  },
  {
    "additionalInfo": {
      "audioUrl": null,
      "examples": [
        {
          "text": "El/La periodista escribió un artículo fascinante.",
          "translation": "The journalist wrote a fascinating article.",
        },
      ],
      "imgUrl": "https://example.com/images/periodista.jpg",
      "shortDef": "<b>periodista means</b> Journalist",
    },
    "answer": [
      "periodista",
      "periodísta",
    ],
    "options": null,
    "question": [
      "https://example.com/audio/periodista.mp3",
    ],
    "wordId": Any<String>,
  },
  {
    "additionalInfo": {
      "audioUrl": null,
      "examples": [
        {
          "text": "La casa es muy grande.",
          "translation": "The house is very big.",
        },
      ],
      "imgUrl": "https://example.com/images/grande.jpg",
      "shortDef": "<b>grande means</b> Big, large.",
    },
    "answer": [
      "grande",
    ],
    "options": null,
    "question": [
      "https://example.com/audio/grande.mp3",
    ],
    "wordId": Any<String>,
  },
  {
    "additionalInfo": {
      "audioUrl": null,
      "examples": [
        {
          "text": "Pienso en ti todos los días.",
          "translation": "I think about you every day.",
        },
      ],
      "imgUrl": "https://example.com/images/pensar.jpg",
      "shortDef": "<b>pensar means</b> To think.",
    },
    "answer": [
      "pensar",
    ],
    "options": null,
    "question": [
      "https://example.com/audio/pensar.mp3",
    ],
    "wordId": Any<String>,
  },
  {
    "additionalInfo": {
      "audioUrl": null,
      "examples": [
        {
          "text": "Su hermosura es indescriptible.",
          "translation": "Her beauty is indescribable.",
        },
      ],
      "imgUrl": "https://example.com/images/hermosura.jpg",
      "shortDef": "<b>hermosura means</b> Beauty.",
    },
    "answer": [
      "hermosura",
    ],
    "options": null,
    "question": [
      "https://example.com/audio/hermosura.mp3",
    ],
    "wordId": Any<String>,
  },
]
`;

exports[`game queries game query with GENDER and SPANISH 1`] = `
[
  {
    "additionalInfo": {
      "audioUrl": "https://example.com/audio/felicidad.mp3",
      "examples": [
        {
          "text": "Su felicidad es contagiosa.",
          "translation": "Her happiness is contagious.",
        },
      ],
      "imgUrl": "https://example.com/images/felicidad.jpg",
      "shortDef": "<b>felicidad means</b> Happiness.",
    },
    "answer": [
      "feminine",
    ],
    "options": null,
    "question": [
      "felicidad",
    ],
    "wordId": Any<String>,
  },
  {
    "additionalInfo": {
      "audioUrl": "https://example.com/audio/periodista.mp3",
      "examples": [
        {
          "text": "El/La periodista escribió un artículo fascinante.",
          "translation": "The journalist wrote a fascinating article.",
        },
      ],
      "imgUrl": "https://example.com/images/periodista.jpg",
      "shortDef": "<b>periodista means</b> Journalist",
    },
    "answer": [
      "feminine",
      "masculine",
    ],
    "options": null,
    "question": [
      "periodista",
    ],
    "wordId": Any<String>,
  },
  {
    "additionalInfo": {
      "audioUrl": "https://example.com/audio/hermosura.mp3",
      "examples": [
        {
          "text": "Su hermosura es indescriptible.",
          "translation": "Her beauty is indescribable.",
        },
      ],
      "imgUrl": "https://example.com/images/hermosura.jpg",
      "shortDef": "<b>hermosura means</b> Beauty.",
    },
    "answer": [
      "feminine",
    ],
    "options": null,
    "question": [
      "hermosura",
    ],
    "wordId": Any<String>,
  },
  {
    "additionalInfo": {
      "audioUrl": "https://example.com/audio/sombrero.mp3",
      "examples": [
        {
          "text": "El vaquero llevaba un sombrero de ala ancha.",
          "translation": "The cowboy wore a wide-brimmed hat.",
        },
        {
          "text": "Se puso el sombrero para protegerse del sol.",
          "translation": "He put on the hat to protect himself from the sun.",
        },
      ],
      "imgUrl": "https://example.com/images/sombrero.jpg",
      "shortDef": "<b>sombrero means</b> Hat",
    },
    "answer": [
      "masculine",
    ],
    "options": null,
    "question": [
      "sombrero",
    ],
    "wordId": Any<String>,
  },
  {
    "additionalInfo": {
      "audioUrl": "https://example.com/audio/platano.mp3",
      "examples": [
        {
          "text": "Para evitar que se pegue, es mejor engrasar la sartén antes de freír.",
          "translation": "To prevent sticking, it's best to powder the pan before frying.",
        },
      ],
      "imgUrl": "https://example.com/images/skillet.jpg",
      "shortDef": "<b>sartén means</b> skillet",
    },
    "answer": [
      "feminine",
      "masculine",
    ],
    "options": null,
    "question": [
      "sartén",
    ],
    "wordId": Any<String>,
  },
  {
    "additionalInfo": {
      "audioUrl": "https://example.com/audio/fresa.mp3",
      "examples": [
        {
          "text": "Ella recogió una fresa madura del jardín.",
          "translation": "She picked a ripe strawberry from the garden.",
        },
      ],
      "imgUrl": "https://example.com/images/fresa.jpg",
      "shortDef": "<b>fresa means</b> Soft red fruit with seeds.",
    },
    "answer": [
      "feminine",
    ],
    "options": null,
    "question": [
      "fresa",
    ],
    "wordId": Any<String>,
  },
]
`;

exports[`game queries game query with IMAGE and ENGLISH 1`] = `
[
  {
    "additionalInfo": {
      "audioUrl": "https://example.com/audio/serendipity.mp3",
      "examples": [
        {
          "text": "She found the perfect book by sheer serendipity.",
          "translation": null,
        },
      ],
      "imgUrl": null,
      "shortDef": "<b>serendipity means</b> Unexpected good fortune.",
    },
    "answer": [
      "serendipity",
    ],
    "options": null,
    "question": [
      "https://example.com/images/serendipity.jpg",
    ],
    "wordId": Any<String>,
  },
  {
    "additionalInfo": {
      "audioUrl": "https://example.com/audio/ephemeral.mp3",
      "examples": [
        {
          "text": "The beauty of the cherry blossoms is ephemeral.",
          "translation": null,
        },
      ],
      "imgUrl": null,
      "shortDef": "<b>ephemeral means</b> Short-lived.",
    },
    "answer": [
      "ephemeral",
    ],
    "options": null,
    "question": [
      "https://example.com/images/ephemeral.jpg",
    ],
    "wordId": Any<String>,
  },
  {
    "additionalInfo": {
      "audioUrl": "https://example.com/audio/ubiquitous.mp3",
      "examples": [
        {
          "text": "Smartphones have become ubiquitous in modern life.",
          "translation": null,
        },
      ],
      "imgUrl": null,
      "shortDef": "<b>ubiquitous means</b> Found everywhere.",
    },
    "answer": [
      "ubiquitous",
    ],
    "options": null,
    "question": [
      "https://example.com/images/ubiquitous.jpg",
    ],
    "wordId": Any<String>,
  },
  {
    "additionalInfo": {
      "audioUrl": "https://example.com/audio/quixotic.mp3",
      "examples": [
        {
          "text": "His quixotic quest for world peace amused his friends.",
          "translation": null,
        },
      ],
      "imgUrl": null,
      "shortDef": "<b>quixotic means</b> Idealistic but impractical.",
    },
    "answer": [
      "quixotic",
    ],
    "options": null,
    "question": [
      "https://example.com/images/quixotic.jpg",
    ],
    "wordId": Any<String>,
  },
  {
    "additionalInfo": {
      "audioUrl": "https://example.com/audio/solitude.mp3",
      "examples": [
        {
          "text": "She enjoyed the peace and quiet of her mountain solitude.",
          "translation": null,
        },
      ],
      "imgUrl": null,
      "shortDef": "<b>solitude means</b> State of being alone.",
    },
    "answer": [
      "solitude",
    ],
    "options": null,
    "question": [
      "https://example.com/images/solitude.jpg",
    ],
    "wordId": Any<String>,
  },
  {
    "additionalInfo": {
      "audioUrl": "https://example.com/audio/luminous.mp3",
      "examples": [
        {
          "text": "The luminous moon lit up the night sky.",
          "translation": null,
        },
      ],
      "imgUrl": null,
      "shortDef": "<b>luminous means</b> Glowing or bright.",
    },
    "answer": [
      "luminous",
    ],
    "options": null,
    "question": [
      "https://example.com/images/luminous.jpg",
    ],
    "wordId": Any<String>,
  },
]
`;

exports[`game queries game query with IMAGE and SPANISH 1`] = `
[
  {
    "additionalInfo": {
      "audioUrl": "https://example.com/audio/correr.mp3",
      "examples": [
        {
          "text": "Él puede correr muy rápido.",
          "translation": "He can run very fast.",
        },
      ],
      "imgUrl": null,
      "shortDef": "<b>correr means</b> To run.",
    },
    "answer": [
      "correr",
      "korrer",
    ],
    "options": null,
    "question": [
      "https://example.com/images/correr.jpg",
    ],
    "wordId": Any<String>,
  },
  {
    "additionalInfo": {
      "audioUrl": "https://example.com/audio/felicidad.mp3",
      "examples": [
        {
          "text": "Su felicidad es contagiosa.",
          "translation": "Her happiness is contagious.",
        },
      ],
      "imgUrl": null,
      "shortDef": "<b>felicidad means</b> Happiness.",
    },
    "answer": [
      "felicidad",
      "felisidad",
    ],
    "options": null,
    "question": [
      "https://example.com/images/felicidad.jpg",
    ],
    "wordId": Any<String>,
  },
  {
    "additionalInfo": {
      "audioUrl": "https://example.com/audio/periodista.mp3",
      "examples": [
        {
          "text": "El/La periodista escribió un artículo fascinante.",
          "translation": "The journalist wrote a fascinating article.",
        },
      ],
      "imgUrl": null,
      "shortDef": "<b>periodista means</b> Journalist",
    },
    "answer": [
      "periodista",
      "periodísta",
    ],
    "options": null,
    "question": [
      "https://example.com/images/periodista.jpg",
    ],
    "wordId": Any<String>,
  },
  {
    "additionalInfo": {
      "audioUrl": "https://example.com/audio/grande.mp3",
      "examples": [
        {
          "text": "La casa es muy grande.",
          "translation": "The house is very big.",
        },
      ],
      "imgUrl": null,
      "shortDef": "<b>grande means</b> Big, large.",
    },
    "answer": [
      "grande",
    ],
    "options": null,
    "question": [
      "https://example.com/images/grande.jpg",
    ],
    "wordId": Any<String>,
  },
  {
    "additionalInfo": {
      "audioUrl": "https://example.com/audio/pensar.mp3",
      "examples": [
        {
          "text": "Pienso en ti todos los días.",
          "translation": "I think about you every day.",
        },
      ],
      "imgUrl": null,
      "shortDef": "<b>pensar means</b> To think.",
    },
    "answer": [
      "pensar",
    ],
    "options": null,
    "question": [
      "https://example.com/images/pensar.jpg",
    ],
    "wordId": Any<String>,
  },
  {
    "additionalInfo": {
      "audioUrl": "https://example.com/audio/hermosura.mp3",
      "examples": [
        {
          "text": "Su hermosura es indescriptible.",
          "translation": "Her beauty is indescribable.",
        },
      ],
      "imgUrl": null,
      "shortDef": "<b>hermosura means</b> Beauty.",
    },
    "answer": [
      "hermosura",
    ],
    "options": null,
    "question": [
      "https://example.com/images/hermosura.jpg",
    ],
    "wordId": Any<String>,
  },
]
`;

exports[`game queries game query with SELECT_DEF and ENGLISH 1`] = `
[
  {
    "additionalInfo": {
      "audioUrl": "https://example.com/audio/serendipity.mp3",
      "examples": [
        {
          "text": "She found the perfect book by sheer serendipity.",
          "translation": null,
        },
      ],
      "imgUrl": "https://example.com/images/serendipity.jpg",
      "shortDef": null,
    },
    "answer": [
      "Unexpected good fortune.",
    ],
    "options": [
      "Short-lived.",
      "Found everywhere.",
      "Idealistic but impractical.",
      "State of being alone.",
      "Glowing or bright.",
      "Unexpected good fortune.",
    ],
    "question": [
      "serendipity",
    ],
    "wordId": Any<String>,
  },
  {
    "additionalInfo": {
      "audioUrl": "https://example.com/audio/ephemeral.mp3",
      "examples": [
        {
          "text": "The beauty of the cherry blossoms is ephemeral.",
          "translation": null,
        },
      ],
      "imgUrl": "https://example.com/images/ephemeral.jpg",
      "shortDef": null,
    },
    "answer": [
      "Short-lived.",
    ],
    "options": [
      "Unexpected good fortune.",
      "Found everywhere.",
      "Idealistic but impractical.",
      "State of being alone.",
      "Glowing or bright.",
      "Short-lived.",
    ],
    "question": [
      "ephemeral",
    ],
    "wordId": Any<String>,
  },
  {
    "additionalInfo": {
      "audioUrl": "https://example.com/audio/ubiquitous.mp3",
      "examples": [
        {
          "text": "Smartphones have become ubiquitous in modern life.",
          "translation": null,
        },
      ],
      "imgUrl": "https://example.com/images/ubiquitous.jpg",
      "shortDef": null,
    },
    "answer": [
      "Found everywhere.",
    ],
    "options": [
      "Unexpected good fortune.",
      "Short-lived.",
      "Idealistic but impractical.",
      "State of being alone.",
      "Glowing or bright.",
      "Found everywhere.",
    ],
    "question": [
      "ubiquitous",
    ],
    "wordId": Any<String>,
  },
  {
    "additionalInfo": {
      "audioUrl": "https://example.com/audio/quixotic.mp3",
      "examples": [
        {
          "text": "His quixotic quest for world peace amused his friends.",
          "translation": null,
        },
      ],
      "imgUrl": "https://example.com/images/quixotic.jpg",
      "shortDef": null,
    },
    "answer": [
      "Idealistic but impractical.",
    ],
    "options": [
      "Unexpected good fortune.",
      "Short-lived.",
      "Found everywhere.",
      "State of being alone.",
      "Glowing or bright.",
      "Idealistic but impractical.",
    ],
    "question": [
      "quixotic",
    ],
    "wordId": Any<String>,
  },
  {
    "additionalInfo": {
      "audioUrl": "https://example.com/audio/solitude.mp3",
      "examples": [
        {
          "text": "She enjoyed the peace and quiet of her mountain solitude.",
          "translation": null,
        },
      ],
      "imgUrl": "https://example.com/images/solitude.jpg",
      "shortDef": null,
    },
    "answer": [
      "State of being alone.",
    ],
    "options": [
      "Unexpected good fortune.",
      "Short-lived.",
      "Found everywhere.",
      "Idealistic but impractical.",
      "Glowing or bright.",
      "State of being alone.",
    ],
    "question": [
      "solitude",
    ],
    "wordId": Any<String>,
  },
  {
    "additionalInfo": {
      "audioUrl": "https://example.com/audio/luminous.mp3",
      "examples": [
        {
          "text": "The luminous moon lit up the night sky.",
          "translation": null,
        },
      ],
      "imgUrl": "https://example.com/images/luminous.jpg",
      "shortDef": null,
    },
    "answer": [
      "Glowing or bright.",
    ],
    "options": [
      "Unexpected good fortune.",
      "Short-lived.",
      "Found everywhere.",
      "Idealistic but impractical.",
      "State of being alone.",
      "Glowing or bright.",
    ],
    "question": [
      "luminous",
    ],
    "wordId": Any<String>,
  },
]
`;

exports[`game queries game query with SELECT_DEF and SPANISH 1`] = `
[
  {
    "additionalInfo": {
      "audioUrl": "https://example.com/audio/correr.mp3",
      "examples": [
        {
          "text": "Él puede correr muy rápido.",
          "translation": "He can run very fast.",
        },
      ],
      "imgUrl": "https://example.com/images/correr.jpg",
      "shortDef": null,
    },
    "answer": [
      "To run.",
    ],
    "options": [
      "Happiness.",
      "Journalist",
      "Big, large.",
      "To think.",
      "Beauty.",
      "To run.",
    ],
    "question": [
      "correr",
    ],
    "wordId": Any<String>,
  },
  {
    "additionalInfo": {
      "audioUrl": "https://example.com/audio/felicidad.mp3",
      "examples": [
        {
          "text": "Su felicidad es contagiosa.",
          "translation": "Her happiness is contagious.",
        },
      ],
      "imgUrl": "https://example.com/images/felicidad.jpg",
      "shortDef": null,
    },
    "answer": [
      "Happiness.",
    ],
    "options": [
      "To run.",
      "Journalist",
      "Big, large.",
      "To think.",
      "Beauty.",
      "Happiness.",
    ],
    "question": [
      "felicidad",
    ],
    "wordId": Any<String>,
  },
  {
    "additionalInfo": {
      "audioUrl": "https://example.com/audio/periodista.mp3",
      "examples": [
        {
          "text": "El/La periodista escribió un artículo fascinante.",
          "translation": "The journalist wrote a fascinating article.",
        },
      ],
      "imgUrl": "https://example.com/images/periodista.jpg",
      "shortDef": null,
    },
    "answer": [
      "Journalist",
    ],
    "options": [
      "To run.",
      "Happiness.",
      "Big, large.",
      "To think.",
      "Beauty.",
      "Journalist",
    ],
    "question": [
      "periodista",
    ],
    "wordId": Any<String>,
  },
  {
    "additionalInfo": {
      "audioUrl": "https://example.com/audio/grande.mp3",
      "examples": [
        {
          "text": "La casa es muy grande.",
          "translation": "The house is very big.",
        },
      ],
      "imgUrl": "https://example.com/images/grande.jpg",
      "shortDef": null,
    },
    "answer": [
      "Big, large.",
    ],
    "options": [
      "To run.",
      "Happiness.",
      "Journalist",
      "To think.",
      "Beauty.",
      "Big, large.",
    ],
    "question": [
      "grande",
    ],
    "wordId": Any<String>,
  },
  {
    "additionalInfo": {
      "audioUrl": "https://example.com/audio/pensar.mp3",
      "examples": [
        {
          "text": "Pienso en ti todos los días.",
          "translation": "I think about you every day.",
        },
      ],
      "imgUrl": "https://example.com/images/pensar.jpg",
      "shortDef": null,
    },
    "answer": [
      "To think.",
    ],
    "options": [
      "To run.",
      "Happiness.",
      "Journalist",
      "Big, large.",
      "Beauty.",
      "To think.",
    ],
    "question": [
      "pensar",
    ],
    "wordId": Any<String>,
  },
  {
    "additionalInfo": {
      "audioUrl": "https://example.com/audio/hermosura.mp3",
      "examples": [
        {
          "text": "Su hermosura es indescriptible.",
          "translation": "Her beauty is indescribable.",
        },
      ],
      "imgUrl": "https://example.com/images/hermosura.jpg",
      "shortDef": null,
    },
    "answer": [
      "Beauty.",
    ],
    "options": [
      "To run.",
      "Happiness.",
      "Journalist",
      "Big, large.",
      "To think.",
      "Beauty.",
    ],
    "question": [
      "hermosura",
    ],
    "wordId": Any<String>,
  },
]
`;

exports[`game queries game query with SELECT_WORD and ENGLISH 1`] = `
[
  {
    "additionalInfo": {
      "audioUrl": "https://example.com/audio/serendipity.mp3",
      "examples": [
        {
          "text": "She found the perfect book by sheer serendipity.",
          "translation": null,
        },
      ],
      "imgUrl": "https://example.com/images/serendipity.jpg",
      "shortDef": null,
    },
    "answer": [
      "serendipity",
    ],
    "options": [
      "ephemeral",
      "ubiquitous",
      "quixotic",
      "solitude",
      "luminous",
      "serendipity",
    ],
    "question": [
      "Unexpected good fortune.",
    ],
    "wordId": Any<String>,
  },
  {
    "additionalInfo": {
      "audioUrl": "https://example.com/audio/ephemeral.mp3",
      "examples": [
        {
          "text": "The beauty of the cherry blossoms is ephemeral.",
          "translation": null,
        },
      ],
      "imgUrl": "https://example.com/images/ephemeral.jpg",
      "shortDef": null,
    },
    "answer": [
      "ephemeral",
    ],
    "options": [
      "serendipity",
      "ubiquitous",
      "quixotic",
      "solitude",
      "luminous",
      "ephemeral",
    ],
    "question": [
      "Short-lived.",
    ],
    "wordId": Any<String>,
  },
  {
    "additionalInfo": {
      "audioUrl": "https://example.com/audio/ubiquitous.mp3",
      "examples": [
        {
          "text": "Smartphones have become ubiquitous in modern life.",
          "translation": null,
        },
      ],
      "imgUrl": "https://example.com/images/ubiquitous.jpg",
      "shortDef": null,
    },
    "answer": [
      "ubiquitous",
    ],
    "options": [
      "serendipity",
      "ephemeral",
      "quixotic",
      "solitude",
      "luminous",
      "ubiquitous",
    ],
    "question": [
      "Found everywhere.",
    ],
    "wordId": Any<String>,
  },
  {
    "additionalInfo": {
      "audioUrl": "https://example.com/audio/quixotic.mp3",
      "examples": [
        {
          "text": "His quixotic quest for world peace amused his friends.",
          "translation": null,
        },
      ],
      "imgUrl": "https://example.com/images/quixotic.jpg",
      "shortDef": null,
    },
    "answer": [
      "quixotic",
    ],
    "options": [
      "serendipity",
      "ephemeral",
      "ubiquitous",
      "solitude",
      "luminous",
      "quixotic",
    ],
    "question": [
      "Idealistic but impractical.",
    ],
    "wordId": Any<String>,
  },
  {
    "additionalInfo": {
      "audioUrl": "https://example.com/audio/solitude.mp3",
      "examples": [
        {
          "text": "She enjoyed the peace and quiet of her mountain solitude.",
          "translation": null,
        },
      ],
      "imgUrl": "https://example.com/images/solitude.jpg",
      "shortDef": null,
    },
    "answer": [
      "solitude",
    ],
    "options": [
      "serendipity",
      "ephemeral",
      "ubiquitous",
      "quixotic",
      "luminous",
      "solitude",
    ],
    "question": [
      "State of being alone.",
    ],
    "wordId": Any<String>,
  },
  {
    "additionalInfo": {
      "audioUrl": "https://example.com/audio/luminous.mp3",
      "examples": [
        {
          "text": "The luminous moon lit up the night sky.",
          "translation": null,
        },
      ],
      "imgUrl": "https://example.com/images/luminous.jpg",
      "shortDef": null,
    },
    "answer": [
      "luminous",
    ],
    "options": [
      "serendipity",
      "ephemeral",
      "ubiquitous",
      "quixotic",
      "solitude",
      "luminous",
    ],
    "question": [
      "Glowing or bright.",
    ],
    "wordId": Any<String>,
  },
]
`;

exports[`game queries game query with SELECT_WORD and SPANISH 1`] = `
[
  {
    "additionalInfo": {
      "audioUrl": "https://example.com/audio/correr.mp3",
      "examples": [
        {
          "text": "Él puede correr muy rápido.",
          "translation": "He can run very fast.",
        },
      ],
      "imgUrl": "https://example.com/images/correr.jpg",
      "shortDef": null,
    },
    "answer": [
      "correr",
    ],
    "options": [
      "felicidad",
      "periodista",
      "grande",
      "pensar",
      "hermosura",
      "correr",
    ],
    "question": [
      "To run.",
    ],
    "wordId": Any<String>,
  },
  {
    "additionalInfo": {
      "audioUrl": "https://example.com/audio/felicidad.mp3",
      "examples": [
        {
          "text": "Su felicidad es contagiosa.",
          "translation": "Her happiness is contagious.",
        },
      ],
      "imgUrl": "https://example.com/images/felicidad.jpg",
      "shortDef": null,
    },
    "answer": [
      "felicidad",
    ],
    "options": [
      "correr",
      "periodista",
      "grande",
      "pensar",
      "hermosura",
      "felicidad",
    ],
    "question": [
      "Happiness.",
    ],
    "wordId": Any<String>,
  },
  {
    "additionalInfo": {
      "audioUrl": "https://example.com/audio/periodista.mp3",
      "examples": [
        {
          "text": "El/La periodista escribió un artículo fascinante.",
          "translation": "The journalist wrote a fascinating article.",
        },
      ],
      "imgUrl": "https://example.com/images/periodista.jpg",
      "shortDef": null,
    },
    "answer": [
      "periodista",
    ],
    "options": [
      "correr",
      "felicidad",
      "grande",
      "pensar",
      "hermosura",
      "periodista",
    ],
    "question": [
      "Journalist",
    ],
    "wordId": Any<String>,
  },
  {
    "additionalInfo": {
      "audioUrl": "https://example.com/audio/grande.mp3",
      "examples": [
        {
          "text": "La casa es muy grande.",
          "translation": "The house is very big.",
        },
      ],
      "imgUrl": "https://example.com/images/grande.jpg",
      "shortDef": null,
    },
    "answer": [
      "grande",
    ],
    "options": [
      "correr",
      "felicidad",
      "periodista",
      "pensar",
      "hermosura",
      "grande",
    ],
    "question": [
      "Big, large.",
    ],
    "wordId": Any<String>,
  },
  {
    "additionalInfo": {
      "audioUrl": "https://example.com/audio/pensar.mp3",
      "examples": [
        {
          "text": "Pienso en ti todos los días.",
          "translation": "I think about you every day.",
        },
      ],
      "imgUrl": "https://example.com/images/pensar.jpg",
      "shortDef": null,
    },
    "answer": [
      "pensar",
    ],
    "options": [
      "correr",
      "felicidad",
      "periodista",
      "grande",
      "hermosura",
      "pensar",
    ],
    "question": [
      "To think.",
    ],
    "wordId": Any<String>,
  },
  {
    "additionalInfo": {
      "audioUrl": "https://example.com/audio/hermosura.mp3",
      "examples": [
        {
          "text": "Su hermosura es indescriptible.",
          "translation": "Her beauty is indescribable.",
        },
      ],
      "imgUrl": "https://example.com/images/hermosura.jpg",
      "shortDef": null,
    },
    "answer": [
      "hermosura",
    ],
    "options": [
      "correr",
      "felicidad",
      "periodista",
      "grande",
      "pensar",
      "hermosura",
    ],
    "question": [
      "Beauty.",
    ],
    "wordId": Any<String>,
  },
]
`;

exports[`game queries game query with SPEAKING and ENGLISH 1`] = `
[
  {
    "additionalInfo": {
      "audioUrl": "https://example.com/audio/serendipity.mp3",
      "examples": [
        {
          "text": "She found the perfect book by sheer serendipity.",
          "translation": null,
        },
      ],
      "imgUrl": "https://example.com/images/serendipity.jpg",
      "shortDef": null,
    },
    "answer": [
      "serendipity",
    ],
    "options": null,
    "question": [
      "Unexpected good fortune.",
    ],
    "wordId": Any<String>,
  },
  {
    "additionalInfo": {
      "audioUrl": "https://example.com/audio/ephemeral.mp3",
      "examples": [
        {
          "text": "The beauty of the cherry blossoms is ephemeral.",
          "translation": null,
        },
      ],
      "imgUrl": "https://example.com/images/ephemeral.jpg",
      "shortDef": null,
    },
    "answer": [
      "ephemeral",
    ],
    "options": null,
    "question": [
      "Short-lived.",
    ],
    "wordId": Any<String>,
  },
  {
    "additionalInfo": {
      "audioUrl": "https://example.com/audio/ubiquitous.mp3",
      "examples": [
        {
          "text": "Smartphones have become ubiquitous in modern life.",
          "translation": null,
        },
      ],
      "imgUrl": "https://example.com/images/ubiquitous.jpg",
      "shortDef": null,
    },
    "answer": [
      "ubiquitous",
    ],
    "options": null,
    "question": [
      "Found everywhere.",
    ],
    "wordId": Any<String>,
  },
  {
    "additionalInfo": {
      "audioUrl": "https://example.com/audio/quixotic.mp3",
      "examples": [
        {
          "text": "His quixotic quest for world peace amused his friends.",
          "translation": null,
        },
      ],
      "imgUrl": "https://example.com/images/quixotic.jpg",
      "shortDef": null,
    },
    "answer": [
      "quixotic",
    ],
    "options": null,
    "question": [
      "Idealistic but impractical.",
    ],
    "wordId": Any<String>,
  },
  {
    "additionalInfo": {
      "audioUrl": "https://example.com/audio/solitude.mp3",
      "examples": [
        {
          "text": "She enjoyed the peace and quiet of her mountain solitude.",
          "translation": null,
        },
      ],
      "imgUrl": "https://example.com/images/solitude.jpg",
      "shortDef": null,
    },
    "answer": [
      "solitude",
    ],
    "options": null,
    "question": [
      "State of being alone.",
    ],
    "wordId": Any<String>,
  },
  {
    "additionalInfo": {
      "audioUrl": "https://example.com/audio/luminous.mp3",
      "examples": [
        {
          "text": "The luminous moon lit up the night sky.",
          "translation": null,
        },
      ],
      "imgUrl": "https://example.com/images/luminous.jpg",
      "shortDef": null,
    },
    "answer": [
      "luminous",
    ],
    "options": null,
    "question": [
      "Glowing or bright.",
    ],
    "wordId": Any<String>,
  },
]
`;

exports[`game queries game query with SPEAKING and SPANISH 1`] = `
[
  {
    "additionalInfo": {
      "audioUrl": "https://example.com/audio/correr.mp3",
      "examples": [
        {
          "text": "Él puede correr muy rápido.",
          "translation": "He can run very fast.",
        },
      ],
      "imgUrl": "https://example.com/images/correr.jpg",
      "shortDef": null,
    },
    "answer": [
      "correr",
      "korrer",
    ],
    "options": null,
    "question": [
      "To run.",
    ],
    "wordId": Any<String>,
  },
  {
    "additionalInfo": {
      "audioUrl": "https://example.com/audio/felicidad.mp3",
      "examples": [
        {
          "text": "Su felicidad es contagiosa.",
          "translation": "Her happiness is contagious.",
        },
      ],
      "imgUrl": "https://example.com/images/felicidad.jpg",
      "shortDef": null,
    },
    "answer": [
      "felicidad",
      "felisidad",
    ],
    "options": null,
    "question": [
      "Happiness.",
    ],
    "wordId": Any<String>,
  },
  {
    "additionalInfo": {
      "audioUrl": "https://example.com/audio/periodista.mp3",
      "examples": [
        {
          "text": "El/La periodista escribió un artículo fascinante.",
          "translation": "The journalist wrote a fascinating article.",
        },
      ],
      "imgUrl": "https://example.com/images/periodista.jpg",
      "shortDef": null,
    },
    "answer": [
      "periodista",
      "periodísta",
    ],
    "options": null,
    "question": [
      "Journalist",
    ],
    "wordId": Any<String>,
  },
  {
    "additionalInfo": {
      "audioUrl": "https://example.com/audio/grande.mp3",
      "examples": [
        {
          "text": "La casa es muy grande.",
          "translation": "The house is very big.",
        },
      ],
      "imgUrl": "https://example.com/images/grande.jpg",
      "shortDef": null,
    },
    "answer": [
      "grande",
    ],
    "options": null,
    "question": [
      "Big, large.",
    ],
    "wordId": Any<String>,
  },
  {
    "additionalInfo": {
      "audioUrl": "https://example.com/audio/pensar.mp3",
      "examples": [
        {
          "text": "Pienso en ti todos los días.",
          "translation": "I think about you every day.",
        },
      ],
      "imgUrl": "https://example.com/images/pensar.jpg",
      "shortDef": null,
    },
    "answer": [
      "pensar",
    ],
    "options": null,
    "question": [
      "To think.",
    ],
    "wordId": Any<String>,
  },
  {
    "additionalInfo": {
      "audioUrl": "https://example.com/audio/hermosura.mp3",
      "examples": [
        {
          "text": "Su hermosura es indescriptible.",
          "translation": "Her beauty is indescribable.",
        },
      ],
      "imgUrl": "https://example.com/images/hermosura.jpg",
      "shortDef": null,
    },
    "answer": [
      "hermosura",
    ],
    "options": null,
    "question": [
      "Beauty.",
    ],
    "wordId": Any<String>,
  },
]
`;

exports[`game queries game query with TYPE_WORD and ENGLISH 1`] = `
[
  {
    "additionalInfo": {
      "audioUrl": "https://example.com/audio/serendipity.mp3",
      "examples": [
        {
          "text": "She found the perfect book by sheer serendipity.",
          "translation": null,
        },
      ],
      "imgUrl": "https://example.com/images/serendipity.jpg",
      "shortDef": null,
    },
    "answer": [
      "serendipity",
    ],
    "options": null,
    "question": [
      "Unexpected good fortune.",
    ],
    "wordId": Any<String>,
  },
  {
    "additionalInfo": {
      "audioUrl": "https://example.com/audio/ephemeral.mp3",
      "examples": [
        {
          "text": "The beauty of the cherry blossoms is ephemeral.",
          "translation": null,
        },
      ],
      "imgUrl": "https://example.com/images/ephemeral.jpg",
      "shortDef": null,
    },
    "answer": [
      "ephemeral",
    ],
    "options": null,
    "question": [
      "Short-lived.",
    ],
    "wordId": Any<String>,
  },
  {
    "additionalInfo": {
      "audioUrl": "https://example.com/audio/ubiquitous.mp3",
      "examples": [
        {
          "text": "Smartphones have become ubiquitous in modern life.",
          "translation": null,
        },
      ],
      "imgUrl": "https://example.com/images/ubiquitous.jpg",
      "shortDef": null,
    },
    "answer": [
      "ubiquitous",
    ],
    "options": null,
    "question": [
      "Found everywhere.",
    ],
    "wordId": Any<String>,
  },
  {
    "additionalInfo": {
      "audioUrl": "https://example.com/audio/quixotic.mp3",
      "examples": [
        {
          "text": "His quixotic quest for world peace amused his friends.",
          "translation": null,
        },
      ],
      "imgUrl": "https://example.com/images/quixotic.jpg",
      "shortDef": null,
    },
    "answer": [
      "quixotic",
    ],
    "options": null,
    "question": [
      "Idealistic but impractical.",
    ],
    "wordId": Any<String>,
  },
  {
    "additionalInfo": {
      "audioUrl": "https://example.com/audio/solitude.mp3",
      "examples": [
        {
          "text": "She enjoyed the peace and quiet of her mountain solitude.",
          "translation": null,
        },
      ],
      "imgUrl": "https://example.com/images/solitude.jpg",
      "shortDef": null,
    },
    "answer": [
      "solitude",
    ],
    "options": null,
    "question": [
      "State of being alone.",
    ],
    "wordId": Any<String>,
  },
  {
    "additionalInfo": {
      "audioUrl": "https://example.com/audio/luminous.mp3",
      "examples": [
        {
          "text": "The luminous moon lit up the night sky.",
          "translation": null,
        },
      ],
      "imgUrl": "https://example.com/images/luminous.jpg",
      "shortDef": null,
    },
    "answer": [
      "luminous",
    ],
    "options": null,
    "question": [
      "Glowing or bright.",
    ],
    "wordId": Any<String>,
  },
]
`;

exports[`game queries game query with TYPE_WORD and SPANISH 1`] = `
[
  {
    "additionalInfo": {
      "audioUrl": "https://example.com/audio/correr.mp3",
      "examples": [
        {
          "text": "Él puede correr muy rápido.",
          "translation": "He can run very fast.",
        },
      ],
      "imgUrl": "https://example.com/images/correr.jpg",
      "shortDef": null,
    },
    "answer": [
      "correr",
      "korrer",
    ],
    "options": null,
    "question": [
      "To run.",
    ],
    "wordId": Any<String>,
  },
  {
    "additionalInfo": {
      "audioUrl": "https://example.com/audio/felicidad.mp3",
      "examples": [
        {
          "text": "Su felicidad es contagiosa.",
          "translation": "Her happiness is contagious.",
        },
      ],
      "imgUrl": "https://example.com/images/felicidad.jpg",
      "shortDef": null,
    },
    "answer": [
      "felicidad",
      "felisidad",
    ],
    "options": null,
    "question": [
      "Happiness.",
    ],
    "wordId": Any<String>,
  },
  {
    "additionalInfo": {
      "audioUrl": "https://example.com/audio/periodista.mp3",
      "examples": [
        {
          "text": "El/La periodista escribió un artículo fascinante.",
          "translation": "The journalist wrote a fascinating article.",
        },
      ],
      "imgUrl": "https://example.com/images/periodista.jpg",
      "shortDef": null,
    },
    "answer": [
      "periodista",
      "periodísta",
    ],
    "options": null,
    "question": [
      "Journalist",
    ],
    "wordId": Any<String>,
  },
  {
    "additionalInfo": {
      "audioUrl": "https://example.com/audio/grande.mp3",
      "examples": [
        {
          "text": "La casa es muy grande.",
          "translation": "The house is very big.",
        },
      ],
      "imgUrl": "https://example.com/images/grande.jpg",
      "shortDef": null,
    },
    "answer": [
      "grande",
    ],
    "options": null,
    "question": [
      "Big, large.",
    ],
    "wordId": Any<String>,
  },
  {
    "additionalInfo": {
      "audioUrl": "https://example.com/audio/pensar.mp3",
      "examples": [
        {
          "text": "Pienso en ti todos los días.",
          "translation": "I think about you every day.",
        },
      ],
      "imgUrl": "https://example.com/images/pensar.jpg",
      "shortDef": null,
    },
    "answer": [
      "pensar",
    ],
    "options": null,
    "question": [
      "To think.",
    ],
    "wordId": Any<String>,
  },
  {
    "additionalInfo": {
      "audioUrl": "https://example.com/audio/hermosura.mp3",
      "examples": [
        {
          "text": "Su hermosura es indescriptible.",
          "translation": "Her beauty is indescribable.",
        },
      ],
      "imgUrl": "https://example.com/images/hermosura.jpg",
      "shortDef": null,
    },
    "answer": [
      "hermosura",
    ],
    "options": null,
    "question": [
      "Beauty.",
    ],
    "wordId": Any<String>,
  },
]
`;

exports[`game queries game query with valid user for Conjugation game and cond tense 1`] = `
[
  {
    "additionalInfo": {
      "audioUrl": "https://example.com/audio/correr.mp3",
      "examples": null,
      "imgUrl": "https://example.com/images/correr.jpg",
      "shortDef": "<b>correr means</b> To run.",
    },
    "answer": [
      "correría",
      "correrías",
      "correría",
      "correríamos",
      "correríais",
      "correrían",
    ],
    "options": null,
    "question": [
      "correr",
    ],
    "wordId": Any<String>,
  },
  {
    "additionalInfo": {
      "audioUrl": "https://example.com/audio/pensar.mp3",
      "examples": null,
      "imgUrl": "https://example.com/images/pensar.jpg",
      "shortDef": "<b>pensar means</b> To think.",
    },
    "answer": [
      "pensaría",
      "pensarías",
      "pensaría",
      "pensaríamos",
      "pensaríais",
      "pensarían",
    ],
    "options": null,
    "question": [
      "pensar",
    ],
    "wordId": Any<String>,
  },
]
`;

exports[`game queries game query with valid user for Conjugation game and futr tense 1`] = `
[
  {
    "additionalInfo": {
      "audioUrl": "https://example.com/audio/correr.mp3",
      "examples": null,
      "imgUrl": "https://example.com/images/correr.jpg",
      "shortDef": "<b>correr means</b> To run.",
    },
    "answer": [
      "correré",
      "correrás",
      "correrá",
      "correremos",
      "correréis",
      "correrán",
    ],
    "options": null,
    "question": [
      "correr",
    ],
    "wordId": Any<String>,
  },
  {
    "additionalInfo": {
      "audioUrl": "https://example.com/audio/pensar.mp3",
      "examples": null,
      "imgUrl": "https://example.com/images/pensar.jpg",
      "shortDef": "<b>pensar means</b> To think.",
    },
    "answer": [
      "pensaré",
      "pensarás",
      "pensará",
      "pensaremos",
      "pensaréis",
      "pensarán",
    ],
    "options": null,
    "question": [
      "pensar",
    ],
    "wordId": Any<String>,
  },
]
`;

exports[`game queries game query with valid user for Conjugation game and impf tense 1`] = `
[
  {
    "additionalInfo": {
      "audioUrl": "https://example.com/audio/correr.mp3",
      "examples": null,
      "imgUrl": "https://example.com/images/correr.jpg",
      "shortDef": "<b>correr means</b> To run.",
    },
    "answer": [
      "corre",
      "corra",
      "corramos",
      "corred",
      "corran",
    ],
    "options": null,
    "question": [
      "correr",
    ],
    "wordId": Any<String>,
  },
  {
    "additionalInfo": {
      "audioUrl": "https://example.com/audio/pensar.mp3",
      "examples": null,
      "imgUrl": "https://example.com/images/pensar.jpg",
      "shortDef": "<b>pensar means</b> To think.",
    },
    "answer": [
      "piensa",
      "piense",
      "pensemos",
      "pensad",
      "piensen",
    ],
    "options": null,
    "question": [
      "pensar",
    ],
    "wordId": Any<String>,
  },
]
`;

exports[`game queries game query with valid user for Conjugation game and pind tense 1`] = `
[
  {
    "additionalInfo": {
      "audioUrl": "https://example.com/audio/correr.mp3",
      "examples": null,
      "imgUrl": "https://example.com/images/correr.jpg",
      "shortDef": "<b>correr means</b> To run.",
    },
    "answer": [
      "corro",
      "corres",
      "corre",
      "corremos",
      "corréis",
      "corren",
    ],
    "options": null,
    "question": [
      "correr",
    ],
    "wordId": Any<String>,
  },
  {
    "additionalInfo": {
      "audioUrl": "https://example.com/audio/pensar.mp3",
      "examples": null,
      "imgUrl": "https://example.com/images/pensar.jpg",
      "shortDef": "<b>pensar means</b> To think.",
    },
    "answer": [
      "pienso",
      "piensas",
      "piensa",
      "pensamos",
      "pensáis",
      "piensan",
    ],
    "options": null,
    "question": [
      "pensar",
    ],
    "wordId": Any<String>,
  },
]
`;

exports[`game queries game query with valid user for Conjugation game and ppci tense 1`] = `
[
  {
    "additionalInfo": {
      "audioUrl": "https://example.com/audio/correr.mp3",
      "examples": null,
      "imgUrl": "https://example.com/images/correr.jpg",
      "shortDef": "<b>correr means</b> To run.",
    },
    "answer": [
      "he corrido",
      "has corrido",
      "ha corrido",
      "hemos corrido",
      "habéis corrido",
      "han corrido",
    ],
    "options": null,
    "question": [
      "correr",
    ],
    "wordId": Any<String>,
  },
  {
    "additionalInfo": {
      "audioUrl": "https://example.com/audio/pensar.mp3",
      "examples": null,
      "imgUrl": "https://example.com/images/pensar.jpg",
      "shortDef": "<b>pensar means</b> To think.",
    },
    "answer": [
      "he pensado",
      "has pensado",
      "ha pensado",
      "hemos pensado",
      "habéis pensado",
      "han pensado",
    ],
    "options": null,
    "question": [
      "pensar",
    ],
    "wordId": Any<String>,
  },
]
`;

exports[`game queries game query with valid user for Conjugation game and pprf tense 1`] = `
[
  {
    "additionalInfo": {
      "audioUrl": "https://example.com/audio/correr.mp3",
      "examples": null,
      "imgUrl": "https://example.com/images/correr.jpg",
      "shortDef": "<b>correr means</b> To run.",
    },
    "answer": [
      "he corrido",
      "has corrido",
      "ha corrido",
      "hemos corrido",
      "habéis corrido",
      "han corrido",
    ],
    "options": null,
    "question": [
      "correr",
    ],
    "wordId": Any<String>,
  },
  {
    "additionalInfo": {
      "audioUrl": "https://example.com/audio/pensar.mp3",
      "examples": null,
      "imgUrl": "https://example.com/images/pensar.jpg",
      "shortDef": "<b>pensar means</b> To think.",
    },
    "answer": [
      "he pensado",
      "has pensado",
      "ha pensado",
      "hemos pensado",
      "habéis pensado",
      "han pensado",
    ],
    "options": null,
    "question": [
      "pensar",
    ],
    "wordId": Any<String>,
  },
]
`;

exports[`game queries game query with valid user for Conjugation game and pret tense 1`] = `
[
  {
    "additionalInfo": {
      "audioUrl": "https://example.com/audio/correr.mp3",
      "examples": null,
      "imgUrl": "https://example.com/images/correr.jpg",
      "shortDef": "<b>correr means</b> To run.",
    },
    "answer": [
      "corrí",
      "corriste",
      "corrió",
      "corrimos",
      "corristeis",
      "corrieron",
    ],
    "options": null,
    "question": [
      "correr",
    ],
    "wordId": Any<String>,
  },
  {
    "additionalInfo": {
      "audioUrl": "https://example.com/audio/pensar.mp3",
      "examples": null,
      "imgUrl": "https://example.com/images/pensar.jpg",
      "shortDef": "<b>pensar means</b> To think.",
    },
    "answer": [
      "pensé",
      "pensaste",
      "pensó",
      "pensamos",
      "pensasteis",
      "pensaron",
    ],
    "options": null,
    "question": [
      "pensar",
    ],
    "wordId": Any<String>,
  },
]
`;

exports[`game queries game query with valid user for Conjugation game and psub tense 1`] = `
[
  {
    "additionalInfo": {
      "audioUrl": "https://example.com/audio/correr.mp3",
      "examples": null,
      "imgUrl": "https://example.com/images/correr.jpg",
      "shortDef": "<b>correr means</b> To run.",
    },
    "answer": [
      "corra",
      "corras",
      "corra",
      "corramos",
      "corráis",
      "corran",
    ],
    "options": null,
    "question": [
      "correr",
    ],
    "wordId": Any<String>,
  },
  {
    "additionalInfo": {
      "audioUrl": "https://example.com/audio/pensar.mp3",
      "examples": null,
      "imgUrl": "https://example.com/images/pensar.jpg",
      "shortDef": "<b>pensar means</b> To think.",
    },
    "answer": [
      "piense",
      "pienses",
      "piense",
      "pensemos",
      "penséis",
      "piensen",
    ],
    "options": null,
    "question": [
      "pensar",
    ],
    "wordId": Any<String>,
  },
]
`;
